--- a/elements/LongbowoftheHeavensProjectile.mod.json
+++ b/elements/LongbowoftheHeavensProjectile.mod.json
@@ -13,8 +13,8 @@
     "power": 5.0,
     "damage": 9999.0,
     "knockback": 5,
-    "entityModel": "Default",
-    "customModelTexture": "",
+    "entityModel": "Modellongbowoftheheavensprojectile",
+    "customModelTexture": "arrow.png",
     "onHitsBlock": {
       "name": "LongbowoftheHeavensBulletHitsBlock"
     }
